--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
       <h2>projects</h2>
       <div class="projects-container">
         <div class="project">
-          <img src="project.png" />
+          <img src="nugget.png" />
           <div class="project-description">
-            <h3>wci cs club instagram</h3>
+            <h3>nugget game</h3>
             <a href="https://www.instagram.com/wci_computer_science"
               >learn more →</a
             >
           </div>
         </div>
         <div class="project">
-          <img src="project.png" />
+          <img src="nugget.png" />
           <div class="project-description">
-            <h3>wci cs club instagram</h3>
+            <h3>nugget game</h3>
             <a href="https://www.instagram.com/wci_computer_science"
               >learn more →</a
             >
           </div>
         </div>
         <div class="project">
-          <img src="project.png" />
+          <img src="nugget.png" />
           <div class="project-description">
-            <h3>wci cs club instagram</h3>
+            <h3>nugget game</h3>
             <a href="https://www.instagram.com/wci_computer_science"
               >learn more →</a
             >
