--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daniel's Awesome Website!</title>
+    <title>daniel's awesome website!!!</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="navbar">
       <a href="">daniel</a>
+      <a href="#projects">projects</a>
     </div>
     <div class="landing">
       <h2>daniel</h2>
@@ -22,7 +23,7 @@
       </p>
     </div>
     <div class="projects">
-      <h2>projects</h2>
+      <h2 id="projects">projects</h2>
       <div class="projects-container">
         <div class="project">
           <img src="nugget.png" />
